# pdf-extractor-py

./: DEMO_README.md  LICENSE  README.md  analyze_results.py  create_and_extract_samples.py  create_legal_sample.py  create_sample_pdf.py  demo_legal_extraction.py  pyproject.toml  setup.sh  show_expected_output.py  simulate_extraction.py
examples/: README.md  advanced_usage.py  basic_usage.py
examples/output/: extracted_text.txt  table_1.csv  table_1.parquet  table_2.csv  table_2.parquet  table_3.csv  table_3.parquet
pdf_extractor/: __init__.py  cli.py  extractor.py  table_extractor.py  text_extractor.py
tests/: __init__.py  test_cli.py  test_extractor.py
